--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <div class="logo">
         <img
-          src="https://cdn.dribbble.com/userupload/4694762/file/original-b922532e702fbded67f83c6ffbe87af9.png?compress=1&resize=1024x312&vertical=center"
+          src="/assets/img/logo.webp"
           alt="logo-image"
         />
       </div>
@@ -24,7 +24,7 @@
     <header>
       <div class="mainPic">
         <img
-          src="https://cdn.dribbble.com/userupload/4694761/file/original-d48ece7f33c0a84bc68ba25c4596d85f.png?compress=1&resize=1024x693&vertical=center"
+          src="/assets/img/mainpic.webp"
           alt="sa"
         />
       </div>
