--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <div class="logo">
         <img
-          src="/assets/img/logo.webp"
+          src="assets/img/logo.webp"
           alt="logo-image"
         />
       </div>
@@ -24,7 +24,7 @@
     <header>
       <div class="mainPic">
         <img
-          src="/assets/img/mainpic.webp"
+          src="assets/img/mainpic.webp"
           alt="sa"
         />
       </div>
